# pyscript-stubs

./: README.md  pyproject.toml
src/pyscript-stubs/: __init__.pyi  base.pyi  document_class.pyi  element.pyi  node.pyi  window_class.pyi
